# cyphershare

./: .gitignore  .gitmodules  GEMINI.md  IMPLEMENTATION_PLAN.md  README.md  SWARM_PAYWALL.md  TASKS.md  eslint.config.mjs  feature_request_ezkl_body.md  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prover_abi.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  pull_request_template.yml  task.yml
components/: header.tsx  wallet-connect-button.tsx
components/codex/: CodexDebugConsole.tsx  NodeInfo.tsx
components/debug/: TacoDebugConsole.tsx
conditional_lockup_contract/: Cargo.toml
conditional_lockup_contract/src/: lib.rs
context/: CodexContext.tsx  DebugConsoleContext.tsx  FileTransferContext.tsx  SettingsContext.tsx  SwarmContext.tsx  TacoContext.tsx  WakuContext.tsx  WalletContext.tsx  wallet-context.tsx
data_and_python/: README.md  clean_cgm.py  first_cgm_log.csv  improve_analysis.py  memes_glucose.ipynb  memes_glucose.py  reconstruct_file.py  run_analysis.sh  run_explanation_interpret.py  second_cgm_log.csv  split_file.py  test_file_utils.py  verify_integrity.py
hooks/: useCodex.ts  useFileEncryption.ts  useFileList.ts  usePyodide.ts  useSwarm.ts  useTaco.ts  useWaku.ts
issues/: Addition_of_fNIRS_and_Glucose_Meter_Dataset.md
lib/: codex.ts
pages/: _app.tsx  index.tsx  index_original.tsx  legacy-index.tsx  receive.tsx  send.tsx
staking_contract/: Cargo.toml  README.md
staking_contract/src/: lib.rs
styles/: globals.css
types/: files.ts  taco.ts  vlayer.d.ts
utils/: fileUtils.ts
(+25 files in other folders)
