[package]
name = "staking_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.1.0"
primitive-types = "0.12.1"
borsh = "1.5.7"

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true